--- a/EstiloPaginaCarteleras.css
+++ b/EstiloPaginaCarteleras.css
@@ -5,17 +5,18 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #f4f4f4;
+    background-color: #fff;
+    transition: filter 0.3s ease-in-out;
 }
 
 .lista-container {
-    margin-top: 80px; /* Espacio superior para centrar la lista en la pantalla */
+    margin-top: 80px;
+    /* Espacio superior para centrar la lista en la pantalla */
 }
 
 .eventosNumerados {
     padding: 0;
     text-align: center;
-    border: 2px solid #555;
     padding: 10px 20px;
     margin: 10px 0;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -30,11 +31,33 @@ body {
 
 .eventosNumerados:hover {
     transform: scale(1.1);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 50px rgba(0, 0, 0, 1);
 }
 
 .eventosNumerados img {
     width: 250px;
 }
 
+.eventosNumerados.blurred {
+    filter: blur(5px);
+    /* Ajusta el valor según desees */
+}
 
+.eventosNumerados::before {
+    content: '';
+    position: absolute;
+    bottom: 0%;
+    left: 0px;
+    width: 100%;
+    height: 3px;
+    background: #D82B2B;
+    display: block;
+    transform-origin: right top;
+    transform: scale(0, 1);
+    transition: transform 0.4s cubic-bezier(1, 0, 0, 1)
+}
+
+.eventosNumerados:hover::before {
+    transform-origin: left top;
+    transform: scale(1, 1)
+}
