--- a/EstiloRankings.css
+++ b/EstiloRankings.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     font-family: 'Helvetica', sans-serif;
     background-color: #FFF;
+    z-index: -2;
 }
 
 #contenedor-rankings {
@@ -13,73 +14,96 @@ body {
     margin-top: 70px;
 }
 
-.lista-rankings {
-    width: 375px;
+.contenedor-tabla {
     margin: 13px;
-    padding: 35px;
+}
+
+.tabla-rankings {
+    border-collapse: collapse;
+    width: 375px;
     background-color: #ffffff;
+    overflow: hidden;
 }
 
-.lista-rankings a {
-    box-shadow: 10px;
+.tabla-rankings th {
+    text-align: left;
+    border-bottom: 1px solid #eee;
 }
 
-.lista-rankings img {
-    padding-left: 40px;
-    width: 260px;
-    height: auto;
-    transition: transform 0.3s ease;
+.tabla-rankings td {
+    text-align: left;
+    padding: 10px;
 }
 
-.lista-rankings a img:hover {
-    transform: scale(1.1);
-}
-
-.lista-rankings h2 {
-    font-size: 22px;
-    color: #CE2020;
-    text-align: center;
-    margin-bottom: 10px;
-}
-
-.lista-rankings p {
-    font-size: 18px;
-    color: grey;
-}
-
-.lista-rankings h3 {
-    font-size: 27px;
-}
-
-.lista-rankings ol {
-    margin-top: 15px;
-}
-
-li a {
+.tabla-rankings a {
     text-decoration: none;
     color: #000;
-    margin-left: 25%;
 }
 
-li:hover {
+.tabla-rankings img {
+    width: auto;
+    height: 130px;
+    transition: transform 0.3s ease;
+    position: relative;
+    top: 10px;
+    z-index: 0;
+}
+
+.tabla-rankings img:hover {
+    transform: scale(1.1);
+    z-index: -2; /* Asegura que la imagen esté detrás del borde */
+}
+
+.posicion:hover,
+.peleador-ranking:hover {
     background-color: #E3E3E3;
-    cursor: pointer;
 }
 
-li {
-    list-style-type: none;
-    margin: 5px 0;
+h5 {
+    font-size: 24px;
+    font-weight: bold;
+    margin: 10px 0;
+}
+
+h6 {
+    font-size: 15px;
+    margin-top: 10px;
+    color: #abadb1;
+}
+
+.posicion {
+    font-size: 12px;
+    font-weight: bold;
     padding: 5px;
+    width: 5px;
+}
+
+.peleador-ranking {
+    font-size: 12px;
+}
+
+h4 {
+    font-size: 14px;
+    color: #CE2020;
+    font-weight: bold;
+}
+
+/* Nueva clase para el encabezado del campeonato */
+.rankings--athlete--champion {
     display: flex;
     justify-content: space-between;
-}
-
-ul {
+    align-items: center;
     position: relative;
-    top: -1%;
-    z-index: 100;
-    border-top: 1px solid #EAEAEA;
-    background-color: #FFF;
+    z-index: 1;/* Ajusta el z-index según sea necesario */
+    overflow: hidden;
 }
 
-/* Agrega más estilos según sea necesario */
+.rankings--athlete--champion .info {
+    max-width: 50%;
+    /* Ajusta el ancho máximo según sea necesario */
+}
+
+.rankings--athlete--champion img {
+    max-width: 100%;
+    /* Ajusta el ancho máximo según sea necesario */
+}
