--- a/Carteleras/EstiloCarteleras.css
+++ b/Carteleras/EstiloCarteleras.css
@@ -1,31 +1,29 @@
-body {
+.body {
     background-color: white;
     margin: 0;
 }
 
+.contenedor-informacion {
+    width: 100%;
+    margin-top: 60px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
 
 h1 {
     color: darkred;
-    margin: 0;
     padding: 20px 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    font-size: 28px; /* Aumenta el tamaño del texto */
+    font-size: 28px;
     font-family: 'Helvetica Neue Condensed Bold', Arial, sans-serif;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Agrega sombra al texto */
-    letter-spacing: 1px; /* Espaciado entre letras */
-    border-bottom: 2px solid darkred; /* Línea inferior */
-    margin-top: 80px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    letter-spacing: 1px;
+    border-bottom: 2px solid darkred;
 }
 
-
 #left-button, #right-button {
-    position: absolute;
-    top: 100px; /* Ajusta la posición vertical superior */
-    height: 40px;
-    width: 40px;
+    height: 100%;
+    width: 100%;
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -33,41 +31,36 @@ h1 {
     color: black;
 }
 
-#left-button {
-    left: 20px; /* Ajusta la posición izquierda */
-}
-
-#right-button {
-    right: 20px; /* Ajusta la posición derecha */
-}
-
-#left-button::before
-{
-    content: '\2190'; /* Código Unicode para la flecha izquierda */
+#left-button::after {
+    content: '\2190';
     font-size: 24px;
-    z-index: 2;
 }
 
 #right-button::before {
-    content: '\2192'; /* Código Unicode para la flecha derecha */
+    content: '\2192';
     font-size: 24px;
 }
 
 .image-container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
-    padding: 20px;
+    width: 100%;
 }
 
 .fight-card {
-    margin: 20px;
+    margin: 1em; /* Ajusta el margen según sea necesario */
+    max-width: 250px; /* Establece el ancho máximo al 100% */
+    height: auto;
 }
 
 button {
-    height: 250px;
-    width: 250px;
+    height: 100%;
+    width: 100%;
     transition: transform 0.3s ease;
     position: relative;
+    background-color: transparent;
+    border: none;
 }
 
 button:hover {
@@ -78,10 +71,14 @@ button img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    max-height: 100%; /* Asegura que la altura no exceda el 100% */
+    margin: 0;
 }
 
 p {
-    margin: 10px 0 0;
+    margin: 0;
     text-align: center;
     color: black;
 }
+
+
