--- a/EstiloPaginaPrincipal.css
+++ b/EstiloPaginaPrincipal.css
@@ -5,61 +5,99 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    
 }
 
+/* Estilos para el header */
 header {
     background-color: #FFF;
     color: #000;
     display: flex;
-    justify-content: center; /* Centro el contenido horizontalmente */
+    justify-content: space-around;
+    /* Centro el contenido horizontalmente */
     align-items: center;
-    padding: 0px 0; /* Ajusto el espacio en la parte superior e inferior */
-    width: 100%; /* El encabezado ahora ocupa toda la anchura */
+    padding: 0;
+    /* Ajusto el espacio en la parte superior e inferior */
+    width: 100%;
+    /* El encabezado ahora ocupa toda la anchura */
     max-height: 70px;
-    position: absolute;
+    position: relative;
     top: 0;
-    z-index: 1000; /* Asegura que el header esté encima de otros elementos */
+    z-index: 1000;
+    /* Asegura que el header esté encima de otros elementos */
 }
 
+/* Estilos para la barra de navegación */
 nav {
     display: flex;
-    justify-content: space-around; /* Distribuye los elementos uniformemente */
+    justify-content: space-around;
     align-items: center;
     width: 100%;
+    height: 10%;
+    /* Ajusta el porcentaje de altura según tus necesidades */
     max-height: 70px;
     background-color: #000;
-    padding: 10px 0;
-    position: absolute;
-    top: 0px; /* Altura del header */
+    padding: 15px 0;
+    /* Añadido espacio vertical */
+    position: fixed;
+    /* Cambiado de absolute a fixed */
+    top: 0;
     z-index: 1000;
 }
 
-header.fixed, nav.fixed {
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
-}
-
-.menu-item {   
-    box-shadow: 0 0 5px rgb(0, 0, 0, 1.0);
-    padding: 10px 15px;
-    margin: 0 90px; /* Aumenté el margen entre los ítems de menú */
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.menu-item:hover {
-    transform: scale(1.1); /* Aumenta el tamaño al pasar el cursor por encima */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0,1); /* Añade sombra al pasar el cursor por encima */
-}
-
-nav a {
+/* Estilos generales de los elementos del menú */
+.menu-item {
+    padding: 5px 10px;
+    margin: 0 3rem;
+    text-align: center;
     color: white;
     text-decoration: none;
-    font-size: 16px; /* Tamaño de fuente modificado */
+    font-size: 16px;
+    width: 100%;
+    height: auto;
+    transition: 0.3s;
+    line-height: 1.5;
+    /* Ajusta según sea necesario para dar más espacio vertical al texto */
 }
 
-nav a:hover {
+/* Efectos al pasar el cursor por encima del enlace en la barra de navegación */
+.menu-item:hover {
     background-color: #CE2020;
+    transform: scale(1.1);
 }
+
+/* Media queries para hacer el diseño responsive */
+
+/* Estilos para pantallas grandes */
+@media (max-width: 768px) {
+
+    header,
+    nav {
+        max-height: auto;
+        height: auto;
+        /* Ajusta según sea necesario */
+    }
+
+    .menu-item {
+        margin: auto;
+    }
+}
+
+/* Estilos adicionales para hacer el menú más amigable en pantallas pequeñas */
+@media (max-width: 480px) {
+    nav {
+        flex-direction: column;
+        align-items: center;
+        padding: 10px;
+    }
+
+    .menu-item {
+        margin: 5px 0;
+        width: 100%;
+        /* Ocupar todo el ancho disponible */
+    }
+}
+
+
 
 .contenido {
     width: 100%;
@@ -69,8 +107,8 @@ nav a:hover {
     height: 500px;
     width: auto;
     position: absolute;
-    top: 60%;
-    left: 20%;
+    top: 400px;
+    left: 230px;
     transform: translate(-50%, -50%);
     color: white;
     text-align: center;
