--- a/css/EstiloPaginaPrincipal.css
+++ b/css/EstiloPaginaPrincipal.css
@@ -18,15 +18,14 @@ body {
     width: auto;
     position: absolute;
     top: 400px;
-    left: 230px;
+    left: 180px;
     transform: translate(-50%, -50%);
-    color: white;
+    color: #000;
     text-align: center;
 }
 
 .texto p {
     font-size: 24px;
-    color: white;
 }
 
 p .pelea {
