--- a/css/layout.css
+++ b/css/layout.css
@@ -4,76 +4,100 @@
     font-size: 10px;
 }
 
-
-/* Estilos para el header */
-header {
-    background-color: #FFF;
-    color: #000;
-    display: flex;
-    justify-content: space-around;
-    /* Centro el contenido horizontalmente */
-    align-items: center;
+* {
     padding: 0;
-    /* Ajusto el espacio en la parte superior e inferior */
+    margin: 0;
+    list-style: none;
+    box-sizing: border-box;
+}
+
+
+header {
+    padding: 0;
     width: 100%;
-    /* El encabezado ahora ocupa toda la anchura */
+    height: 10%;
     max-height: 70px;
     position: relative;
     top: 0;
-    z-index: 1000;
-    /* Asegura que el header esté encima de otros elementos */
 }
 
-/* Estilos para la barra de navegación */
 nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
     width: 100%;
     height: 10%;
-    /* Ajusta el porcentaje de altura según tus necesidades */
     max-height: 70px;
     background-color: #000;
-    padding: 15px 0;
-    /* Añadido espacio vertical */
     position: fixed;
-    /* Cambiado de absolute a fixed */
     top: 0;
     z-index: 1000;
 }
 
-#logo-ufc  {
-    transform: scale(0.5);
-    transition: 0.3s;
-    filter: brightness(0) invert(1);
+nav ul {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    /* Agregar esto para eliminar márgenes por defecto */
+    padding: 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    z-index: 0;
 }
 
-#logo-ufc:hover  {
+nav ul li {
+    width: 20%;
+    height: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
+
+#logo-ufc {
+    transform: scale(0.35);
+    transition: 0.3s;
+    filter: brightness(0) invert(1);
+    bottom: 0;
+    width: 100%;
+}
+
+#logo-ufc:hover {
     filter: none;
-    transform: scale(0.75);
+    transform: scale(0.55) !important;
 }
 
 
 /* Estilos generales de los elementos del menú */
 .menu-item {
-    padding: 5px 10px;
-    margin: 0 3rem;
-    text-align: center;
-    color: white;
-    text-decoration: none;    
+    padding: 0;
+    margin: 0 2m;
+    color: #fff;
+    text-decoration: none;
     font-family: 'Sternbach';
     font-size: 20px;
-    width: 100%;
-    height: auto;
     transition: 0.3s;
-    line-height: 1.5;
     /* Ajusta según sea necesario para dar más espacio vertical al texto */
 }
 
 /* Efectos al pasar el cursor por encima del enlace en la barra de navegación */
 .menu-item:hover {
-    color: #CE2020;
+    color: #cE2020;
     transform: scale(1.5);
+}
+
+.checkbtn {
+    color: #FFF;
+    scale: 2;
+    float: right;
+    line-height: 80px;
+    margin-right: 2rem;
+    cursor: pointer;
+    display: none;
+}
+
+#check {
+    display: none;
 }
 
 /* Media queries para hacer el diseño responsive */
@@ -83,28 +107,69 @@ nav {
 
     header,
     nav {
-        max-height: auto;
-        height: auto;
-        /* Ajusta según sea necesario */
+        width: 100%;
+        height: 10%;
+        max-height: 70px;
+        background-color: #000;
+        position: fixed;
+        top: 0;
+        z-index: 1000;
     }
 
     .menu-item {
-        margin: auto;
+        margin: 0 2rem;
+    }
+
+    #logo-ufc {
+        scale: 2.5;
+    }
+
+    #logo-ufc:hover {
+        scale: 2.75;
     }
 }
 
 /* Estilos adicionales para hacer el menú más amigable en pantallas pequeñas */
 @media (max-width: 480px) {
-    nav {
-        flex-direction: column;
-        align-items: center;
-        padding: 10px;
+    
+    
+    .checkbtn {
+        display: block;
     }
 
-    .menu-item {
-        margin: 5px 0;
+    ul {
+        position: absolute ;
+        flex-direction: column;
         width: 100%;
-        /* Ocupar todo el ancho disponible */
+        height: calc(100vh - 70px) !important;
+        background-color: #000;
+        text-align: center;
+        transition: all 0.5s;
+        transform: translateY(-100%);
+    }
+
+    nav ul li {
+        display: flex;
+        color: #fff;
+        line-height: 30px;
+        width: 100%;
+        height: 20% !important;
+    }
+
+#logo-ufc {
+    scale: 1 !important;
+}
+
+    #check:checked~ul {
+        display: block !important;
+        transform: translateY(70px);
+        
+        
+    }
+
+    #check:checked~li {
+        border-top: 1px solid #fff;
+        border-bottom: 1px solid #fff;
     }
 }
 
