--- a/css/layout.css
+++ b/css/layout.css
@@ -102,8 +102,52 @@ nav ul li {
 
 /* Media queries para hacer el diseño responsive */
 
+/* Estilos adicionales para hacer el menú más amigable en pantallas pequeñas */
+@media screen and (max-width: 480px)  {
+    
+    
+    .checkbtn {
+        display: block !important;
+    }
+
+    ul {
+        position: absolute !important;
+        flex-direction: column !important;
+        width: 100%;
+        height: calc(100vh - 70px) !important;
+        background-color: #000 !important;
+        text-align: center !important;
+        transition: all 0.5s !important;
+        transform: translateY(-100%) !important;
+    }
+
+    nav ul li {
+        display: flex !important;
+        color: #fff !important;
+        line-height: 30px !important;
+        width: 100% !important;
+        height: 20% !important;
+    }
+
+#logo-ufc {
+    scale: 1 !important;
+}
+
+    #check:checked~ul {
+        display: block !important;
+        transform: translateY(70px) !important;
+        
+        
+    }
+
+    #check:checked~li {
+        border-top: 1px solid #fff !important;
+        border-bottom: 1px solid #fff !important;
+    }
+}
+
 /* Estilos para pantallas grandes */
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
 
     header,
     nav {
@@ -126,50 +170,6 @@ nav ul li {
 
     #logo-ufc:hover {
         scale: 2.75;
-    }
-}
-
-/* Estilos adicionales para hacer el menú más amigable en pantallas pequeñas */
-@media (max-width: 480px) {
-    
-    
-    .checkbtn {
-        display: block;
-    }
-
-    ul {
-        position: absolute ;
-        flex-direction: column;
-        width: 100%;
-        height: calc(100vh - 70px) !important;
-        background-color: #000;
-        text-align: center;
-        transition: all 0.5s;
-        transform: translateY(-100%);
-    }
-
-    nav ul li {
-        display: flex;
-        color: #fff;
-        line-height: 30px;
-        width: 100%;
-        height: 20% !important;
-    }
-
-#logo-ufc {
-    scale: 1 !important;
-}
-
-    #check:checked~ul {
-        display: block !important;
-        transform: translateY(70px);
-        
-        
-    }
-
-    #check:checked~li {
-        border-top: 1px solid #fff;
-        border-bottom: 1px solid #fff;
     }
 }
 
