--- a/css/layout.css
+++ b/css/layout.css
@@ -71,7 +71,7 @@ nav ul li {
 /* Estilos generales de los elementos del menú */
 .menu-item {
     padding: 0;
-    margin: 0 2m;
+    margin: 0 2rem;
     color: #fff;
     text-decoration: none;
     font-family: 'Sternbach';
