--- a/css/EstiloCarteleras.css
+++ b/css/EstiloCarteleras.css
@@ -1,4 +1,7 @@
-.body {
+body {
+  font-family: "Anton", sans-serif;
+  font-weight: 400;
+  font-style: normal;
     background-color: white;
     margin: 0;
 }
@@ -15,7 +18,6 @@ h1 {
     color: darkred;
     padding: 20px 0;
     font-size: 28px;
-    font-family: 'Helvetica Neue Condensed Bold', Arial, sans-serif;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     letter-spacing: 1px;
     border-bottom: 2px solid darkred;
