--- a/css/EstiloIndividuales.css
+++ b/css/EstiloIndividuales.css
@@ -1,7 +1,9 @@
 body {
+  font-family: "Anton", sans-serif;
+  font-weight: 400;
+  font-style: normal;
     margin: 0;
     padding: 0;
-    font-family: "Helvetica", sans-serif;
     background-color: #f4f4f4;
 }
 
