--- a/css/EstiloPaginaCarteleras.css
+++ b/css/EstiloPaginaCarteleras.css
@@ -1,7 +1,9 @@
 body {
+  font-family: "Anton", sans-serif;
+  font-weight: 400;
+  font-style: normal;
     margin: 0;
     padding: 0;
-    font-family: 'Arial', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
