--- a/css/EstiloPaginaPrincipal.css
+++ b/css/EstiloPaginaPrincipal.css
@@ -5,9 +5,11 @@
 }
 
 body {
+  font-family: "Anton", sans-serif;
+  font-weight: 400;
+  font-style: normal;
     margin: 0;
     padding: 0;
-    font-family: 'Arial', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
