--- a/css/EstiloPeleadores.css
+++ b/css/EstiloPeleadores.css
@@ -1,7 +1,9 @@
 body {
+  font-family: "Anton", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   margin: 0;
   padding: 0;
-  font-family: 'Helvetica', sans-serif;
   background-color: #fff;
 }
 
@@ -122,7 +124,6 @@ button {
   border: none;
   font-size: 15px;
   outline: none;
-  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   cursor: pointer;
 }
 
