--- a/css/EstiloTienda.css
+++ b/css/EstiloTienda.css
@@ -1,5 +1,7 @@
 body {
-    font-family: 'Arial', sans-serif;
+  font-family: "Anton", sans-serif;
+  font-weight: 400;
+  font-style: normal;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
@@ -55,7 +57,6 @@ section {
   padding: 18px 36px;
   margin-right: 70px;
   display: inline-block;
-  font-family: "Lucida Console", Monaco, monospace;
   font-size: 14px;
   letter-spacing: 1px;
   cursor: pointer;
