--- a/css/EstiloPaginaPrincipal.css
+++ b/css/EstiloPaginaPrincipal.css
@@ -28,7 +28,7 @@ body {
     top: 400px;
     left: 180px;
     transform: translate(-50%, -50%);
-    color: #fff;
+    color: #000000;
     text-align: center;
     font-family: 'Sternbach';
 }
